# project

./: .codacy.yml  .dvcignore  .env.template  .flake8  .gitignore  .pylintrc  Final_Project_Team_3_Deliverable_2.pptx  Final_Project_Team_3_Deliverable_3.ipynb  LICENSE  Makefile  README.md  SECURITY.md  aws_confgure.ipynb  bootstrap.sh  bootstrap_aws.ipynb  codacy.yml  dvc.yaml  final_msaai_diabetes_readmission_regression.ipynb  install.sh  manifest.json  manifest.txt  mypy.ini  openai_tts.ipynb  packages-packging.txt  packages-tex.txt  params.yaml  plots.yaml  pyproject.toml  pyrightconfig.json  requirements-pipeline.txt  requirements-pptx2video.txt  requirements.txt  setup.sh  update_repository.sh
.archive/: utils.py  (+7 more)
pipeline/: .dockerignore  .dvcignore  .env.template  .gitignore  .isort.cfg  Makefile  README.md  __init__.py  deconflict-dvc.sh  dvc.yaml  feature_store.yaml  main.py  packages.txt  params.yaml  pyproject.toml  requirements-autogluon-frozen.txt  requirements-autogluon.txt  requirements-deploy-frozen.txt  requirements-deploy.txt  requirements-explore-frozen.txt  requirements-explore.txt  requirements-featurize-frozen.txt  requirements-featurize.txt  requirements-frozen.txt  requirements-infrastruct-frozen.txt  requirements-ingest-frozen.txt  requirements-ingest.txt  requirements-logisticregression.txt  requirements-neuralnetwork-frozen.txt  requirements-neuralnetwork.txt  requirements-preprocess-frozen.txt  requirements-preprocess.txt  requirements.txt  run.sh  setup.py  train.py  update.sh
pipeline/.dvc/: config
pipeline/.old/: deploy.py  featurize.py  ingest.py
pipeline/conf/: config.yaml
pipeline/conf/api/: default.yaml  fastapi.yaml
pipeline/conf/data/: preprocessing.yaml
pipeline/conf/deploy/: default.yaml
pipeline/conf/environment/: dev.yaml  prod.yaml
pipeline/conf/experiment/: base.yaml  full.yaml  quick.yaml
pipeline/conf/explore/: analysis.yaml
pipeline/conf/features/: engineering.yaml  store.yaml
pipeline/conf/infrastructure/: aws.yaml
pipeline/conf/model/: autogluon.yaml  logistic.yaml  neural.yaml
pipeline/conf/monitoring/: alerts.yaml  config.yaml  default.yaml
pipeline/conf/pipeline/: default.yaml
pipeline/conf/stage/: evaluate.yaml  explore.yaml  infrastruct.yaml  prepare.yaml
pipeline/conf/stages/: register.yaml  train.yaml
pipeline/conf/tracking/: experiment.yaml  mlflow.yaml
pipeline/data/: ingestion_metadata.json
pipeline/data/interim/: .gitignore  data_cleaned.parquet
pipeline/data/processed/: .gitignore  data_featured.csv.dvc  data_processed.csv.dvc  feature_names.joblib.dvc  features.parquet  features_not_onehot.parquet  mapping.json  mapping.json.dvc  test.csv.dvc  train.csv.dvc
pipeline/data/raw/: .gitignore  data.parquet  data.parquet.dvc  data_description.json  metadata.json  uci_metadata.json  uci_variables.json  variables.json
pipeline/deploy/: Dockerfile  Dockerfile.monitoring  docker-compose.yml  prometheus.yml
pipeline/deploy/k8s/: deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
pipeline/deploy/security/: network-policy.yaml  pod-security-policy.yaml
pipeline/docker/: Dockerfile.autogluon  Dockerfile.base  Dockerfile.deploy  Dockerfile.evaluate  Dockerfile.explore  Dockerfile.featurize  Dockerfile.infrastruct  Dockerfile.ingest  Dockerfile.logisticregression  Dockerfile.neuralnetwork  Dockerfile.optimize  Dockerfile.preprocess  Dockerfile.register  Dockerfile.serve
pipeline/docs/: ARCHITECTURE.md  README.md
pipeline/dvclive/: metrics.json.dvc  params.yaml.dvc
pipeline/feature_repo/: feature_store.yaml  features_not_onehot.parquet
pipeline/infrastruct/: metadata.json
pipeline/infrastructure/: main.tf
pipeline/metrics/autogluon/: classification_report.json  metrics.json  metrics.json.json  model_info.json  model_metrics.json  params.yaml
pipeline/metrics/data/: data_stats.json
pipeline/metrics/evaluation/: model_comparison.json
pipeline/metrics/explore/: data_quality.json  metrics.json
pipeline/metrics/feast/: materialization_results.json  metrics.json
pipeline/metrics/features/: feature_stats.json
pipeline/metrics/featurize/: metrics.json  statistics.json
pipeline/metrics/infrastruct/: metrics.json
pipeline/metrics/ingest/: metrics.json
pipeline/metrics/logisticregression/: .gitignore  classification_report.json
pipeline/metrics/neuralnetwork/: classification_report.json
pipeline/metrics/preprocess/: metrics.json
pipeline/models/: .gitignore
pipeline/models/autogluon/: artifacts.dvc  metadata.json  model.py  train.py
pipeline/models/logistic_regression/: model.py  train.py
pipeline/models/logisticregression/: .gitignore
pipeline/models/neural_network/: artifacts.dvc  model.py  train.py
pipeline/pipeline/: __init__.py  __main__.py
pipeline/pipeline/cloud/: aws_integration.py
pipeline/pipeline/conf/: __init__.py  config.py  config.yaml  schema.py
pipeline/plots/: .gitignore
pipeline/registry/: metadata.json
pipeline/requirements/: .gitignore  autogluon.txt  base.txt  deploy.txt  develop.txt  evaluate.txt  explore.txt  feast.txt  featurize.txt  infrastruct.txt  ingest.txt  logisticregression.txt  models-frozen.txt  models.txt  monitoring.txt  neuralnetwork.txt  optimize.txt  packages-autogluon.txt  packages.txt  preprocess.txt  register.txt  requirements-autogluon.txt  requirements-deploy.txt  requirements-evaluate.txt  requirements-explore.txt  requirements-featurize.txt  requirements-infrastruct.txt  requirements-ingest.txt  requirements-logisticregression.txt  requirements-monitoring.txt  requirements-neuralnetwork.txt  requirements-optimize.txt  requirements-preprocess.txt  requirements-register.txt  requirements-serve.txt  serve.txt
pipeline/scripts/: check_dependencies.py  manage_venvs.py  run_pipeline.py  setup_directories.py  verify_paths.py  verify_setup.py
pipeline/src/: combine.py  commit.py  deploy.py  destroy.py  explore.py  featurize.py  infrastruct.py  ingest.py  nvidia_gpu.py  preprocess.py  utils.py  visualize.py
pipeline/tests/: conftest.py  pytest.ini  test_models.py
pipeline/visualization/: visualize.py
(+498 files in other folders)
