[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel",
    "uv>=1.0.1,<2.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "diabetic-readmission-risk-prediction"
version = "0.1.0"
description = "Diabetic Readmission Risk Prediction using Machine Learning"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "Jonathan Agustin", email = "jonathan.agustin@example.com" },
    { name = "Zack Robertson", email = "zack.robertson@example.com" },
    { name = "Lisa Vo", email = "lisa.vo@example.com" },
]
keywords = [
    "mlops",
    "diabetes",
    "prediction",
    "healthcare",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.8.4,<4.0.0",
    "autogluon.tabular>=0.5.3,<0.6.0",
    "cleanlab>=2.3.0,<3.0.0",
    "dvc>=2.13.1,<3.0.0",
    "dvclive>=0.7.3,<1.0.0",
    "fastapi>=0.95.0,<0.96.0",
    "feast>=0.29.0,<0.30.0",
    "feast>=0.29.0,<0.30.0",
    "imblearn>=0.10.1,<0.11.0",
    "joblib>=1.2.0,<2.0.0",
    "matplotlib>=3.7.1,<4.0.0",
    "numpy>=1.24.3,<2.0.0",
    "openai>=0.28.0,<0.29.0",
    "optuna>=3.2.0,<4.0.0",
    "pandas>=2.0.0,<3.0.0",
    "passlib>=1.7.4,<2.0.0",
    "pdf2image>=1.16.3,<2.0.0",
    "pillow>=9.5.0,<12.0.0",
    "prometheus-client>=0.16.0,<0.17.0",
    "pyarrow>=10.0.1,<19.0.0",
    "python-jose>=3.3.0,<4.0.0",
    "python-multipart>=0.0.6,<0.1.0",
    "python-pptx>=0.6.21,<0.7.0",
    "redis>=4.5.0,<5.0.0",
    "requests>=2.31.0,<3.0.0",
    "scikit-learn>=1.2.2,<2.0.0",
    "seaborn>=0.12.2,<1.0.0",
    "tenacity>=8.2.0,<9.0.0",
    "tensorflow>=2.13.0,<3.0.0",
    "uv>=1.0.1,<2.0.0",
    "uvicorn>=0.21.0,<0.22.0",
    "wandb>=0.15.0,<0.19.0",
]
[project.optional-dependencies]
dev = [
    "pytest>=7.3.1,<8.0.0",
    "black>=23.11.0,<24.0.0",
    "flake8>=6.0.0,<7.0.0",
    "isort>=5.12.0,<6.0.0",
    "mypy>=1.3.0,<2.0.0",
    "pylint>=2.17.4,<3.0.0",
    "pydocstyle>=6.1.1,<7.0.0",
    "bandit>=1.7.5,<2.0.0",
    "codecov>=3.4.1,<4.0.0",
    "types-requests>=2.31.1,<3.0.0",
    "types-setuptools>=67.0.0,<68.0.0",
    "types-toml>=0.10.1,<0.11.0",
    "types-urllib3>=1.26.16,<1.27.0",
    "types-python-dateutil>=2.8.2,<2.9.0",
    "types-PyYAML>=6.0.12,<7.0.0",
    "types-scipy>=1.10.1,<1.11.0",
    "types-dataclasses>=0.8.0,<0.9.0",
    "types-PyQt5>=5.15.7.1,<5.16.0",
    "types-PyQt6>=6.5.2,<6.6.0",
    "types-PySide2>=5.15.2.1,<5.16.0",
    "types-pyarrow>=10.0.1,<11.0.0",
    "types-pandas>=2.0.15,<2.1.0",
    "types-pydantic>=2.3.1,<2.4.0",
    "types-joblib>=1.2.0,<1.3.0",
    "types-psutil>=5.9.4,<5.10.0",
    "types-opencv-python>=4.8.0.22,<4.9.0",
    "types-lxml>=4.9.3,<4.10.0",
    "types-pyqt6>=6.5.2,<6.6.0",
    "types-pyside2>=5.15.2.1,<5.16.0",
    "types-matplotlib>=3.7.1,<3.8.0",
    "types-openpyxl>=3.1.2,<3.2.0",
    "types-aiohttp>=3.8.4,<3.9.0",
    "types-typing-extensions>=4.7.1,<4.8.0",
    "types-cryptography>=39.0.2,<39.1.0",
    "types-yaml>=6.0.12,<6.1.0",
    "ucimlrepo>=0.2.2,<0.3.0",
]

[tool.black]
line-length = 120
target-version = [
    "py37",
    "py38",
    "py39",
    "py310",
    "py311",
]

[tool.flake8]
max-line-length = 120
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "site-packages",
    "build",
    "dist",
    ".mypy_cache",
    ".pytest_cache",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 120
known_third_party = [
    "feast",
    "yaml",
]
skip_glob = [".venv-*/*"]

[tool.pylint]
disable = [
    "missing-docstring",
    "invalid-name",
    "line-too-long",
    "too-few-public-methods",
    "import-error",
]
max-line-length = 120

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
exclude = "\\.venv-.*"

[tool.coverage.run]
source = [
    "pipeline/src",
    "pipeline/models",
]

[tool.coverage.report]
show_missing = true

[tool.uv]
environments = [
    "sys_platform == 'linux'",
]