[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline"
version = "0.1.0"
description = "Diabetic Readmission Risk Prediction"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "Jonathan Agustin", email = "jonathan.agustin@example.com" },
    { name = "Zack Robertson", email = "zack.robertson@example.com" },
    { name = "Lisa Vo", email = "lisa.vo@example.com" }
]
keywords = ["mlops", "diabetes", "prediction", "healthcare"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "dvc[s3]",
]

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311"]

[tool.flake8]
max-line-length = 120
exclude = [".git", "__pycache__", ".venv", "site-packages", "build", "dist", ".mypy_cache", ".pytest_cache"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 120
known_third_party = ["feast", "yaml"]
skip_glob = [".venv-*/*"]

[tool.pylint]
disable = [
    "line-too-long",
    "too-few-public-methods",
]
max-line-length = 120

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
exclude = "\\.venv-.*"

[tool.coverage.run]
source = ["pipeline/src", "pipeline/models"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true

[tool.uv]
environments = ["sys_platform == 'linux'"]

[tool.ruff]
exclude = [
    "__pypackages__",
    "_build",
    ".eggs",
    ".git",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".uv_cache",
    ".venv-*",
    ".venv",
    ".vscode",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv"
]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.setuptools]
py-modules = []